--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
                 </svg>
               </button>
             </div>
+            <div class="header__icon">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div> 
             <div class="header__buttons">
               <div class="header__button">
                 <button type="button">Додати товар</button>
@@ -205,6 +210,7 @@
       </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script src="js/index.js"></script>
   </body>
 </html>
