--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap-utilities.min.css">
-    <link rel="stylesheet" href="css/index.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">    <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Monvalise</title>
   </head>
@@ -158,7 +157,138 @@
         </div>
       </header>
       <main class="main">
-        <div class="main__container"></div>
+        <div class="main__container container">
+          <div class="main__route">Головна <span>/ Каталог одягу</span></div>
+          <h2 class='main__title'>Каталог одягу</h2>
+          <div class="main__row">
+            <div data-spollers="992,max" class="main__column main__column-filters column-main">
+              <button data-spoller class="column-main__button">Фільтри</button>
+              <div>
+                <div data-spollers="992,min" class="column-main__filters">
+                  <div class="column-main__filter">
+                    <button type="button" data-spoller class="column-main__btn">Категорії 
+                      <svg width="18" height="11" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M0.292892 2.20712L1.70711 0.792908L9 8.0858L16.2929 0.792908L17.7071 2.20712L9 10.9142L0.292892 2.20712Z" fill="#747778"/>
+                      </svg>
+                    </button>
+                    <div class="column-main__category">Категорії</div>
+                  </div>
+                  <div class="column-main__filter">
+                    <button type="button" data-spoller class="column-main__btn">
+                      Ціна
+                      <svg width="18" height="11" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M0.292892 2.20712L1.70711 0.792908L9 8.0858L16.2929 0.792908L17.7071 2.20712L9 10.9142L0.292892 2.20712Z" fill="#747778"/>
+                      </svg>
+                    </button>
+                    <div class="column-main__category">Ціна</div>
+                  </div>
+                  <div class="column-main__filter">
+                    <button type="button" data-spoller class="column-main__btn">
+                      Продавець
+                      <svg width="18" height="11" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M0.292892 2.20712L1.70711 0.792908L9 8.0858L16.2929 0.792908L17.7071 2.20712L9 10.9142L0.292892 2.20712Z" fill="#747778"/>
+                      </svg>
+                    </button>
+                    <div class="column-main__category">Продавець</div>
+                  </div>
+                  <div class="column-main__filter">
+                    <button type="button" data-spoller class="column-main__btn">
+                      Бренд
+                      <svg width="18" height="11" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M0.292892 2.20712L1.70711 0.792908L9 8.0858L16.2929 0.792908L17.7071 2.20712L9 10.9142L0.292892 2.20712Z" fill="#747778"/>
+                      </svg>
+                    </button>
+                    <div class="column-main__category">Бренд</div>
+                  </div>
+                  <div class="column-main__filter">
+                    <button type="button" data-spoller class="column-main__btn">
+                      Стать
+                      <svg width="18" height="11" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M0.292892 2.20712L1.70711 0.792908L9 8.0858L16.2929 0.792908L17.7071 2.20712L9 10.9142L0.292892 2.20712Z" fill="#747778"/>
+                      </svg>
+                    </button>
+                    <div class="column-main__category">
+                      <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="woman">
+                        <label class="form-check-label" for="woman">
+                          Жінкам
+                        </label>
+                      </div>
+                      <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="man">
+                        <label class="form-check-label" for="man">
+                          Чоловікам
+                        </label>
+                      </div>
+                      <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="unisex">
+                        <label class="form-check-label" for="unisex">
+                          Унісекс
+                        </label>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="column-main__filter">
+                    <button type="button" data-spoller class="column-main__btn">
+                      Розмір
+                      <svg width="18" height="11" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M0.292892 2.20712L1.70711 0.792908L9 8.0858L16.2929 0.792908L17.7071 2.20712L9 10.9142L0.292892 2.20712Z" fill="#747778"/>
+                      </svg>
+                    </button>
+                    <div class="column-main__category">Розмір</div>
+                  </div>
+                  <div class="column-main__filter">
+                    <button type="button" data-spoller class="column-main__btn">
+                      Колір
+                      <svg width="18" height="11" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M0.292892 2.20712L1.70711 0.792908L9 8.0858L16.2929 0.792908L17.7071 2.20712L9 10.9142L0.292892 2.20712Z" fill="#747778"/>
+                      </svg>
+                    </button>
+                    <div class="column-main__category">Колір</div>
+                  </div>
+                  <div class="column-main__filter">
+                    <button type="button" data-spoller class="column-main__btn">
+                      Матеріал
+                      <svg width="18" height="11" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M0.292892 2.20712L1.70711 0.792908L9 8.0858L16.2929 0.792908L17.7071 2.20712L9 10.9142L0.292892 2.20712Z" fill="#747778"/>
+                      </svg>
+                    </button>
+                    <div class="column-main__category">Матеріал</div>
+                  </div>
+                  <div class="column-main__filter">
+                    <button type="button" data-spoller class="column-main__btn">
+                      Сезон
+                      <svg width="18" height="11" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M0.292892 2.20712L1.70711 0.792908L9 8.0858L16.2929 0.792908L17.7071 2.20712L9 10.9142L0.292892 2.20712Z" fill="#747778"/>
+                      </svg>
+                    </button>
+                    <div class="column-main__category">Сезон</div>
+                  </div>
+                  <div class="column-main__filter">
+                    <button type="button" data-spoller class="column-main__btn">
+                      Стиль
+                      <svg width="18" height="11" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M0.292892 2.20712L1.70711 0.792908L9 8.0858L16.2929 0.792908L17.7071 2.20712L9 10.9142L0.292892 2.20712Z" fill="#747778"/>
+                      </svg>
+                    </button>
+                    <div class="column-main__category">Стиль</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="main__column main__column-catalog catalog-column">
+              <div class="catalog-column__sorting">
+                <span>Сортувати за:</span> 
+                <select class="form-select" aria-label="Custom select example">
+                  <option selected>За замовчуванням</option>
+                  <option value="cheap">Спочатку Найдешевші</option>
+                  <option value="expensive">Спочатку Найдорожчі</option>
+                  <option value="date">За датою</option>
+                </select>
+              </div>
+            </div>
+          </div>
+        </div>
       </main>
       <footer class="footer">
         <div class="footer__container container">
