add count on pages and count of ware in filters

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
               </div>
               <div class="header__pages">
                 <div class="header__page">
+                  <span>8</span>
                   <a href="#liked" aria-label="page with liked ware" class="header__link">
                     <svg
                       width="21"
@@ -78,6 +79,7 @@
                   </a>
                 </div>
                 <div class="header__page">
+                  <span class='red'>3</span>
                   <a href="#message" aria-label="page with yours chat"  class="header__link">
                     <svg
                       width="20"
@@ -103,7 +105,8 @@
                     </svg>
                   </a>
                 </div>
-                <div class="header__page header__page-profile">
+                <div class="header__page ">
+                  <span>3</span>
                   <a href="#shop" aria-label="shop page" class="header__link">
                     <svg
                       width="20"
@@ -129,7 +132,7 @@
                     </svg>
                   </a>
                 </div>
-                <div class="header__page">
+                <div class="header__page header__page-profile">
                   <a href="#my-page" class="header__link">
                     <img src="img/header/avatar.png" alt="User avatar" />
                   </a>
@@ -186,7 +189,13 @@
                       <path fill-rule="evenodd" clip-rule="evenodd" d="M0.292892 2.20712L1.70711 0.792908L9 8.0858L16.2929 0.792908L17.7071 2.20712L9 10.9142L0.292892 2.20712Z" fill="#747778"/>
                       </svg>
                     </button>
-                    <div class="column-main__category">Ціна</div>
+                    <div class="column-main__category">
+                      <div class='column-main__range'></div>
+                      <div class='column-main__row'>
+                        <div class="column-main__column"></div>
+                        <div class="column-main__column"></div>
+                      </div>
+                    </div>
                   </div>
                   <div class="column-main__filter">
                     <button type="button" data-spoller class="column-main__btn">
@@ -217,19 +226,19 @@
                       <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="woman">
                         <label class="form-check-label" for="woman">
-                          Жінкам<span></span>
+                          Жінкам<span>(64)</span>
                         </label>
                       </div>
                       <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="man">
                         <label class="form-check-label" for="man">
-                          Чоловікам<span></span>
+                          Чоловікам<span>(16)</span>
                         </label>
                       </div>
                       <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="unisex">
                         <label class="form-check-label" for="unisex">
-                          Унісекс<span></span>
+                          Унісекс<span>(24)</span>
                         </label>
                       </div>
                     </div>
