--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap-utilities.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Monvalise</title>
@@ -190,10 +189,22 @@
                       </svg>
                     </button>
                     <div class="column-main__category">
-                      <div class='column-main__range'></div>
+                      <div id="slider-range" class='column-main__range'></div>
                       <div class='column-main__row'>
-                        <div class="column-main__column"></div>
-                        <div class="column-main__column"></div>
+                        <div class="column-main__column">
+                          <div class="column-main__cost">
+                            <label class="column-main__from" for="column-main__value-left ">Від
+                              <input class='column-main__value column-main__value-left' type="text">
+                            </label>
+                          </div>
+                        </div>
+                        <div class="column-main__column">
+                          <div class="column-main__cost">
+                            <label class="column-main__to" for="column-main__value-right">До
+                              <input class='column-main__value column-main__value-right' type="text">
+                            </label>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -303,7 +314,7 @@
               </div>
               <div class='catalog-column__clothing'>
                 <article class='catalog-column__article'>
-                  <button type='button' class='catalog-column__like'>
+                  <button type='button' class='catalog-column__like' aria-label="Like">
                     <svg width="20" height="20" viewBox="0 0 21 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd" clip-rule="evenodd" d="M10.2426 1.75736C12.5858 -0.585787 16.3848 -0.585787 18.7279 1.75736C21.0711 4.10051 21.0711 7.89949 18.7279 10.2426L10.2426 18.728L1.75736 10.2427C-0.585787 7.89953 -0.585786 4.10054 1.75736 1.75739C4.1005 -0.585744 7.89947 -0.58576 10.2426 1.75736ZM17.3137 3.17158C15.7516 1.60948 13.2189 1.60947 11.6568 3.17157L10.2426 4.58579L8.82843 3.17161C7.26633 1.60951 4.73367 1.60951 3.17157 3.17161C1.60948 4.7337 1.60948 7.26636 3.17157 8.82846L10.2426 15.8995L17.3137 8.82843C18.8758 7.26633 18.8758 4.73367 17.3137 3.17158Z" fill="#2D3132"/>
                       </svg>
@@ -313,8 +324,8 @@
                   </div>
                   <div class='catalog-column__character'>
                     <div class='catalog-column__vogue'>ТОП</div>
-                    <h4 class='catalog-column__brand'>LOUIS VUITTON</h4>
-                    <h3 class='catalog-column__description'>Темно-сині джинси Louis Vuitton</h3>
+                    <h3 class='catalog-column__brand'>LOUIS VUITTON</h3>
+                    <p class='catalog-column__description'>Темно-сині джинси Louis Vuitton</p>
                     <div class='catalog-column__row'>
                       <div class="catalog-column__column catalog-column__column-price">
                         <div class='catalog-column__cost'>5 499 ₴</div>
@@ -330,7 +341,7 @@
                   </div>
                 </article>
                 <article class='catalog-column__article'>
-                  <button type='button' class='catalog-column__like'>
+                  <button type='button' class='catalog-column__like' aria-label="Like">
                     <svg width="20" height="20" viewBox="0 0 21 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd" clip-rule="evenodd" d="M10.2426 1.75736C12.5858 -0.585787 16.3848 -0.585787 18.7279 1.75736C21.0711 4.10051 21.0711 7.89949 18.7279 10.2426L10.2426 18.728L1.75736 10.2427C-0.585787 7.89953 -0.585786 4.10054 1.75736 1.75739C4.1005 -0.585744 7.89947 -0.58576 10.2426 1.75736ZM17.3137 3.17158C15.7516 1.60948 13.2189 1.60947 11.6568 3.17157L10.2426 4.58579L8.82843 3.17161C7.26633 1.60951 4.73367 1.60951 3.17157 3.17161C1.60948 4.7337 1.60948 7.26636 3.17157 8.82846L10.2426 15.8995L17.3137 8.82843C18.8758 7.26633 18.8758 4.73367 17.3137 3.17158Z" fill="#2D3132"/>
                       </svg>
@@ -340,8 +351,8 @@
                   </div>
                   <div class='catalog-column__character'>
                     <div class='catalog-column__vogue'>ТОП</div>
-                    <h4 class='catalog-column__brand'>THOM BROWNE</h4>
-                    <h3 class='catalog-column__description'>Чорний піджак Thom Browne</h3>
+                    <h3 class='catalog-column__brand'>THOM BROWNE</h3>
+                    <p class='catalog-column__description'>Чорний піджак Thom Browne</p>
                     <div class='catalog-column__row'>
                       <div class="catalog-column__column catalog-column__column-price">
                         <div class='catalog-column__cost'>11 999 ₴</div>
@@ -357,7 +368,7 @@
                   </div>
                 </article>
                 <article class='catalog-column__article'>
-                  <button type='button' class='catalog-column__like'>
+                  <button type='button' class='catalog-column__like' aria-label="Like">
                     <svg width="20" height="20" viewBox="0 0 21 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd" clip-rule="evenodd" d="M10.2426 1.75736C12.5858 -0.585787 16.3848 -0.585787 18.7279 1.75736C21.0711 4.10051 21.0711 7.89949 18.7279 10.2426L10.2426 18.728L1.75736 10.2427C-0.585787 7.89953 -0.585786 4.10054 1.75736 1.75739C4.1005 -0.585744 7.89947 -0.58576 10.2426 1.75736ZM17.3137 3.17158C15.7516 1.60948 13.2189 1.60947 11.6568 3.17157L10.2426 4.58579L8.82843 3.17161C7.26633 1.60951 4.73367 1.60951 3.17157 3.17161C1.60948 4.7337 1.60948 7.26636 3.17157 8.82846L10.2426 15.8995L17.3137 8.82843C18.8758 7.26633 18.8758 4.73367 17.3137 3.17158Z" fill="#2D3132"/>
                       </svg>
@@ -367,8 +378,8 @@
                   </div>
                   <div class='catalog-column__character'>
                     <div class='catalog-column__vogue disabled'>ТОП</div>
-                    <h4 class='catalog-column__brand'>CANALI</h4>
-                    <h3 class='catalog-column__description'>Вовняний піджак Canali</h3>
+                    <h3 class='catalog-column__brand'>CANALI</h3>
+                    <p class='catalog-column__description'>Вовняний піджак Canali</p>
                     <div class='catalog-column__row'>
                       <div class="catalog-column__column catalog-column__column-price">
                         <div class='catalog-column__cost'>4 999 ₴</div>
@@ -384,7 +395,7 @@
                   </div>
                 </article>
                 <article class='catalog-column__article'>
-                  <button type='button' class='catalog-column__like'>
+                  <button type='button' class='catalog-column__like' aria-label="Like">
                     <svg width="20" height="20" viewBox="0 0 21 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd" clip-rule="evenodd" d="M10.2426 1.75736C12.5858 -0.585787 16.3848 -0.585787 18.7279 1.75736C21.0711 4.10051 21.0711 7.89949 18.7279 10.2426L10.2426 18.728L1.75736 10.2427C-0.585787 7.89953 -0.585786 4.10054 1.75736 1.75739C4.1005 -0.585744 7.89947 -0.58576 10.2426 1.75736ZM17.3137 3.17158C15.7516 1.60948 13.2189 1.60947 11.6568 3.17157L10.2426 4.58579L8.82843 3.17161C7.26633 1.60951 4.73367 1.60951 3.17157 3.17161C1.60948 4.7337 1.60948 7.26636 3.17157 8.82846L10.2426 15.8995L17.3137 8.82843C18.8758 7.26633 18.8758 4.73367 17.3137 3.17158Z" fill="#2D3132"/>
                       </svg>
@@ -394,8 +405,8 @@
                   </div>
                   <div class='catalog-column__character'>
                     <div class='catalog-column__vogue disabled'>ТОП</div>
-                    <h4 class='catalog-column__brand'>LOUIS VUITTON</h4>
-                    <h3 class='catalog-column__description'>Клатч Louis Vuitton Limelight</h3>
+                    <h3 class='catalog-column__brand'>LOUIS VUITTON</h3>
+                    <p class='catalog-column__description'>Клатч Louis Vuitton Limelight</p>
                     <div class='catalog-column__row'>
                       <div class="catalog-column__column catalog-column__column-price">
                         <div class='catalog-column__cost'>4 999 ₴</div>
@@ -411,7 +422,7 @@
                   </div>
                 </article>
                 <article class='catalog-column__article'>
-                  <button type='button' class='catalog-column__like'>
+                  <button type='button' class='catalog-column__like' aria-label="Like">
                     <svg width="20" height="20" viewBox="0 0 21 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd" clip-rule="evenodd" d="M10.2426 1.75736C12.5858 -0.585787 16.3848 -0.585787 18.7279 1.75736C21.0711 4.10051 21.0711 7.89949 18.7279 10.2426L10.2426 18.728L1.75736 10.2427C-0.585787 7.89953 -0.585786 4.10054 1.75736 1.75739C4.1005 -0.585744 7.89947 -0.58576 10.2426 1.75736ZM17.3137 3.17158C15.7516 1.60948 13.2189 1.60947 11.6568 3.17157L10.2426 4.58579L8.82843 3.17161C7.26633 1.60951 4.73367 1.60951 3.17157 3.17161C1.60948 4.7337 1.60948 7.26636 3.17157 8.82846L10.2426 15.8995L17.3137 8.82843C18.8758 7.26633 18.8758 4.73367 17.3137 3.17158Z" fill="#2D3132"/>
                       </svg>
@@ -421,8 +432,8 @@
                   </div>
                   <div class='catalog-column__character'>
                     <div class='catalog-column__vogue disabled'>ТОП</div>
-                    <h4 class='catalog-column__brand'>ELENA GHISELINI</h4>
-                    <h3 class='catalog-column__description'>Сумка з декором Elena Ghisellini</h3>
+                    <h3 class='catalog-column__brand'>ELENA GHISELINI</h3>
+                    <p class='catalog-column__description'>Сумка з декором Elena Ghisellini</p>
                     <div class='catalog-column__row'>
                       <div class="catalog-column__column catalog-column__column-price">
                         <div class='catalog-column__cost'>1 999 ₴</div>
@@ -438,7 +449,7 @@
                   </div>
                 </article>
                 <article class='catalog-column__article'>
-                  <button type='button' class='catalog-column__like'>
+                  <button type='button' class='catalog-column__like' aria-label="Like">
                     <svg width="20" height="20" viewBox="0 0 21 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd" clip-rule="evenodd" d="M10.2426 1.75736C12.5858 -0.585787 16.3848 -0.585787 18.7279 1.75736C21.0711 4.10051 21.0711 7.89949 18.7279 10.2426L10.2426 18.728L1.75736 10.2427C-0.585787 7.89953 -0.585786 4.10054 1.75736 1.75739C4.1005 -0.585744 7.89947 -0.58576 10.2426 1.75736ZM17.3137 3.17158C15.7516 1.60948 13.2189 1.60947 11.6568 3.17157L10.2426 4.58579L8.82843 3.17161C7.26633 1.60951 4.73367 1.60951 3.17157 3.17161C1.60948 4.7337 1.60948 7.26636 3.17157 8.82846L10.2426 15.8995L17.3137 8.82843C18.8758 7.26633 18.8758 4.73367 17.3137 3.17158Z" fill="#2D3132"/>
                       </svg>
@@ -448,8 +459,8 @@
                   </div>
                   <div class='catalog-column__character'>
                     <div class='catalog-column__vogue disabled'>ТОП</div>
-                    <h4 class='catalog-column__brand'>ACNE</h4>
-                    <h3 class='catalog-column__description'>Бомбер Acne на блискавці</h3>
+                    <h3 class='catalog-column__brand'>ACNE</h3>
+                    <p class='catalog-column__description'>Бомбер Acne на блискавці</p>
                     <div class='catalog-column__row'>
                       <div class="catalog-column__column catalog-column__column-price">
                         <div class='catalog-column__cost'>5 999 ₴</div>
@@ -465,7 +476,7 @@
                   </div>
                 </article>
                 <article class='catalog-column__article'>
-                  <button type='button' class='catalog-column__like'>
+                  <button type='button' class='catalog-column__like' aria-label="Like">
                     <svg width="20" height="20" viewBox="0 0 21 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd" clip-rule="evenodd" d="M10.2426 1.75736C12.5858 -0.585787 16.3848 -0.585787 18.7279 1.75736C21.0711 4.10051 21.0711 7.89949 18.7279 10.2426L10.2426 18.728L1.75736 10.2427C-0.585787 7.89953 -0.585786 4.10054 1.75736 1.75739C4.1005 -0.585744 7.89947 -0.58576 10.2426 1.75736ZM17.3137 3.17158C15.7516 1.60948 13.2189 1.60947 11.6568 3.17157L10.2426 4.58579L8.82843 3.17161C7.26633 1.60951 4.73367 1.60951 3.17157 3.17161C1.60948 4.7337 1.60948 7.26636 3.17157 8.82846L10.2426 15.8995L17.3137 8.82843C18.8758 7.26633 18.8758 4.73367 17.3137 3.17158Z" fill="#2D3132"/>
                       </svg>
@@ -475,8 +486,8 @@
                   </div>
                   <div class='catalog-column__character'>
                     <div class='catalog-column__vogue disabled'>ТОП</div>
-                    <h4 class='catalog-column__brand'>GUCCI</h4>
-                    <h3 class='catalog-column__description'>Довга сукня Gucci</h3>
+                    <h3 class='catalog-column__brand'>GUCCI</h3>
+                    <p class='catalog-column__description'>Довга сукня Gucci</p>
                     <div class='catalog-column__row'>
                       <div class="catalog-column__column catalog-column__column-price">
                         <div class='catalog-column__cost'>11 999 ₴</div>
@@ -492,7 +503,7 @@
                   </div>
                 </article>
                 <article class='catalog-column__article'>
-                  <button type='button' class='catalog-column__like'>
+                  <button type='button' class='catalog-column__like' aria-label="Like">
                     <svg width="20" height="20" viewBox="0 0 21 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd" clip-rule="evenodd" d="M10.2426 1.75736C12.5858 -0.585787 16.3848 -0.585787 18.7279 1.75736C21.0711 4.10051 21.0711 7.89949 18.7279 10.2426L10.2426 18.728L1.75736 10.2427C-0.585787 7.89953 -0.585786 4.10054 1.75736 1.75739C4.1005 -0.585744 7.89947 -0.58576 10.2426 1.75736ZM17.3137 3.17158C15.7516 1.60948 13.2189 1.60947 11.6568 3.17157L10.2426 4.58579L8.82843 3.17161C7.26633 1.60951 4.73367 1.60951 3.17157 3.17161C1.60948 4.7337 1.60948 7.26636 3.17157 8.82846L10.2426 15.8995L17.3137 8.82843C18.8758 7.26633 18.8758 4.73367 17.3137 3.17158Z" fill="#2D3132"/>
                       </svg>
@@ -502,8 +513,8 @@
                   </div>
                   <div class='catalog-column__character'>
                     <div class='catalog-column__vogue disabled'>ТОП</div>
-                    <h4 class='catalog-column__brand'>CHANEL</h4>
-                    <h3 class='catalog-column__description'>Помаранчевий бомбер Woolrich</h3>
+                    <h3 class='catalog-column__brand'>CHANEL</h3>
+                    <p class='catalog-column__description'>Помаранчевий бомбер Woolrich</p>
                     <div class='catalog-column__row'>
                       <div class="catalog-column__column catalog-column__column-price">
                         <div class='catalog-column__cost'>1 999 ₴</div>
@@ -519,7 +530,7 @@
                   </div>
                 </article>
                 <article class='catalog-column__article'>
-                  <button type='button' class='catalog-column__like'>
+                  <button type='button' class='catalog-column__like' aria-label="Like">
                     <svg width="20" height="20" viewBox="0 0 21 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd" clip-rule="evenodd" d="M10.2426 1.75736C12.5858 -0.585787 16.3848 -0.585787 18.7279 1.75736C21.0711 4.10051 21.0711 7.89949 18.7279 10.2426L10.2426 18.728L1.75736 10.2427C-0.585787 7.89953 -0.585786 4.10054 1.75736 1.75739C4.1005 -0.585744 7.89947 -0.58576 10.2426 1.75736ZM17.3137 3.17158C15.7516 1.60948 13.2189 1.60947 11.6568 3.17157L10.2426 4.58579L8.82843 3.17161C7.26633 1.60951 4.73367 1.60951 3.17157 3.17161C1.60948 4.7337 1.60948 7.26636 3.17157 8.82846L10.2426 15.8995L17.3137 8.82843C18.8758 7.26633 18.8758 4.73367 17.3137 3.17158Z" fill="#2D3132"/>
                       </svg>
@@ -529,8 +540,8 @@
                   </div>
                   <div class='catalog-column__character'>
                     <div class='catalog-column__vogue disabled'>ТОП</div>
-                    <h4 class='catalog-column__brand'>HACHE</h4>
-                    <h3 class='catalog-column__description'>Салатове пальто Hache</h3>
+                    <h3 class='catalog-column__brand'>HACHE</h3>
+                    <p class='catalog-column__description'>Салатове пальто Hache</p>
                     <div class='catalog-column__row'>
                       <div class="catalog-column__column catalog-column__column-price">
                         <div class='catalog-column__cost'>5 999 ₴</div>
@@ -617,8 +628,9 @@
         </div>
       </footer>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script defer src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script defer src="https://atuin.ru/demo/ui-slider/jquery-ui.min.js"></script>
+    <script defer src="https://atuin.ru/demo/ui-slider/jquery.ui.touch-punch.min.js"></script>
     <script src="js/index.js"></script>
   </body>
 </html>
