add defer to scripts

--- a/index.html
+++ b/index.html
@@ -631,6 +631,6 @@
     <script defer src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script defer src="https://atuin.ru/demo/ui-slider/jquery-ui.min.js"></script>
     <script defer src="https://atuin.ru/demo/ui-slider/jquery.ui.touch-punch.min.js"></script>
-    <script src="js/index.js"></script>
+    <script defer src="js/index.js"></script>
   </body>
 </html>
