--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <nav class="header__nav">
             <ul class="header__list list">
               <li class="list"><a href="#" class="list__link">Головна</a></li>
-              <li class="list"><a href="#" class="list__link">Каталог</a></li>
+              <li class="list"><a href="#" class="list__link active">Каталог</a></li>
               <li class="list"><a href="#" class="list__link">Жінкам</a></li>
               <li class="list"><a href="#" class="list__link">Чоловікам</a></li>
               <li class="list">
