--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
                   <a href="#my-page" class="header__link">
                     <img src="img/header/avatar.png" alt="User avatar" />
                   </a>
+                  <svg width="12" height="12" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M0.292892 2.20712L1.70711 0.792908L9 8.0858L16.2929 0.792908L17.7071 2.20712L9 10.9142L0.292892 2.20712Z" fill="#747778"/>
+                  </svg>
                 </div>
               </div>
             </div>
